--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
 </head>
 
 <body>
-  <div class="container text-center py-5">
-    <h1 id="pkmn"></h1>
-    <button id="boton" type="button" class="btn btn-outline-light"></button>
-  </div>
+
+  <div class="container text-center py-5" id="pkmn">
+    <img src="" alt="">
+    <p></p>
+  </div>  
 
   <!-- Main JavaScript -->
   <script src="main.js"></script>
